Fixed pretty link displayed in dashboards, not necessary to change `vertical-align` CSS property.

--- a/src/collective/eeafaceted/dashboard/browser/static/collective.eeafaceted.dashboard.css
+++ b/src/collective/eeafaceted/dashboard/browser/static/collective.eeafaceted.dashboard.css
@@ -111,7 +111,6 @@ div.pretty_link span.pretty_link_icons,
 a.pretty_link span.pretty_link_content,
 div.pretty_link span.pretty_link_content {
     padding-right: 0.2em;
-    vertical-align: bottom;
 }
 
 #content table.listing th a.sort_arrow_disabled {
